--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,44 @@
 /*  your css code here. If applicable */
+body {
+	background-color: #f5f5f5;
+	margin: 0;
+}
+.header {
+	color: white;
+	background-color: #011e29;
+	text-align: center;
+	padding: 1px;
+}
+.container {
+	display: flex;
+	gap: 10px;
+	padding: 20px;
+	justify-content: center;
+	align-items: flex-start;
+}
+.latest-news-section {
+	background-color: white;
+	border-radius: 10px;
+	text-align: center;
+	width: 200px;
+	padding; 15px;
+}
+.main-article {
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	width: 400px;
+	text-align: center;
+}
+.pictorial-news-section {
+	background-color: white;
+	width: 220px;
+	text-align: center;
+	padding: 15px;
+	border-radius: 10px;
+}
+.pictorial-news-section img {
+	width: 100%;
+	border-radius: 8px;
+	margin-bottom: 10px;
+}
